Added display modularization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,9 +37,7 @@
     "raspberry-pi-pico.cmakePath": "${HOME}/.pico-sdk/cmake/v3.28.6/bin/cmake",
     "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja",
     "files.associations": {
-        "ssd1306_i2c.h": "c",
-        "ssd1306.h": "c",
-        "string.h": "c"
-    },
-    "C_Cpp.errorSquiggles": "disabled"
+        "leds.h": "c",
+        "display.h": "c"
+    }
 }
